# aptos-core

./: Cargo.toml
.circleci/: config.yml
api/src/: lib.rs
aptos-move/aptos-vm/src/: aptos_vm.rs  entitlement_enforcer.rs  lib.rs
crates/aptos/: Cargo.toml
developer-docs-site/docs/reference/: glossary.md
ecosystem/indexer-service/: Cargo.toml
ecosystem/indexer-service/src/: lib.rs  main.rs  routes.rs
ecosystem/indexer/src/: default_processor.rs  lib.rs
ecosystem/indexer/src/indexer/: tailer.rs
ecosystem/platform/server/: .env.example
ecosystem/platform/server/app/controllers/: discourse_controller.rb
ecosystem/platform/server/app/helpers/: node_helper.rb
ecosystem/platform/server/config/: routes.rb
testsuite/smoke-test/src/: indexer.rs
types/src/transaction/: entitlements.rs  mod.rs
