[package]
name = "aptos-indexer-service"
version = "0.0.1"
description = "Aptos Indexer HTTP API Service"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2018"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false

[dependencies]
aptos-api = { path = "../../api" }
aptos-api-types = { path = "../../api/types" }
aptos-indexer = { path = "../indexer" }
aptos-logger = { path = "../../crates/aptos-logger" }
aptos-metrics = { path = "../../crates/aptos-metrics" }
aptos-workspace-hack = { version = "0.1", path = "../../crates/aptos-workspace-hack" }

anyhow = "1.0.52"
async-trait = "0.1.42"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde"] }
clap = "3.1.6"
diesel = { version = "1.4.8", features = ["chrono", "postgres", "r2d2", "numeric", "serde_json"] }
futures = "0.3.12"
once_cell = "1.3.1"
r2d2 = { version = "0.8.9" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.8.1", features = ["full", "time"] }
url = "2.2.2"
warp = { version = "0.3.2", features = ["default", "tls"] }


[[bin]]
name = "aptos-indexer-service"
